--- a/src/style/index.css
+++ b/src/style/index.css
@@ -73,3 +73,13 @@
 .icon-pinglun:before {
   content: '\e61c';
 }
+body {
+  background-color: #f5f7f9;
+}
+.page-nav-bar {
+  background-color: #007bff;
+}
+.page-nav-bar .van-nav-bar__title {
+  color: #fff;
+  font-size: 14px;
+}
