--- a/src/style/index.less
+++ b/src/style/index.less
@@ -2,3 +2,13 @@
 
 //加载图标样式文件
 @import './icon.less';
+body {
+  background-color: #f5f7f9;
+}
+.page-nav-bar {
+  background-color: #007bff;
+  .van-nav-bar__title {
+    color: #fff;
+    font-size: 14px;
+  }
+}
