--- a/src/style/cover.less
+++ b/src/style/cover.less
@@ -6,3 +6,4 @@
 @nav-bar-background-color: @blue;
 @nav-bar-title-text-color: @white;
 @nav-bar-title-font-size: @font-14;
+@tabs-bottom-bar-color: @blue;
