完成了文章搜索

--- a/src/style/cover.less
+++ b/src/style/cover.less
@@ -7,3 +7,4 @@
 @nav-bar-title-text-color: @white;
 @nav-bar-title-font-size: @font-16;
 @tabs-bottom-bar-color: @blue;
+@nav-bar-icon-color: @white;
